@@ -16,6 +16,13 @@
 # Create : K.S. 03/07/10 20:29:07
 #
 
+unless "".respond_to?(:force_encoding)
+  class String
+    def force_encoding(enc)
+      self
+    end
+  end
+end
 
 $LOAD_PATH.unshift File.dirname(__FILE__)
 require 'ndk/version'
