@@ -417,7 +417,7 @@ module Nadoka
 
     def identical_channel_name ch
       # use 4 gsub() because of the compatibility of RFC2813(3.2)
-      ch.toeuc.downcase.tr('[]\\~', '{}|^').tojis
+      ch.toeuc.downcase.tr('[]\\~', '{}|^').tojis.force_encoding('ASCII-8BIT')
     end
 
     RName = {        # ('&','#','+','!')
