@@ -1,3 +1,4 @@
+# coding: ASCII-8BIT
 =begin
 
 = rice - Ruby Irc interfaCE
